Update header and worker/shift options in HTML

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@ select,input{width:100%;padding:10px;margin-top:8px;font-size:16px}
 </head>
 <body>
 
-<header>📊 Cafeteria POS</header>
+<header> CAFE LEGENDAIRE </header>
 
 <div class="container">
 
 <div class="panel">
 <b>Worker</b>
 <select id="worker">
-<option>Admin 1</option>
-<option>Admin 2</option>
+<option>ISMAT</option>
+<option>AHMED</option>
 <option>Admin 3</option>
 <option>Admin 4</option>
 <option>Admin 5</option>
@@ -43,8 +43,8 @@ select,input{width:100%;padding:10px;margin-top:8px;font-size:16px}
 
 <b>Shift</b>
 <select id="shift">
-<option>Morning</option>
-<option>Evening</option>
+<option>SBAH</option>
+<option>3CHIYA</option>
 </select>
 </div>
 
@@ -75,7 +75,7 @@ select,input{width:100%;padding:10px;margin-top:8px;font-size:16px}
 </div>
 
 <script>
-const ADMIN_PIN = "1234";
+const ADMIN_PIN = "12344";
 let cart = [];
 
 let PRODUCTS = JSON.parse(localStorage.getItem("products")) || [
