Enhance product management and add cash features
Updated product structure to include stock and added cash management features.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>Cafeteria POS</title>
 <meta name="theme-color" content="#222">
 <script src="https://unpkg.com/html5-qrcode"></script>
-
 <style>
 body{margin:0;font-family:Arial;background:#f4f4f4}
 header{background:#222;color:#fff;padding:12px;text-align:center;font-size:18px}
@@ -16,7 +15,6 @@ header{background:#222;color:#fff;padding:12px;text-align:center;font-size:18px}
 box-shadow:0 2px 5px rgba(0,0,0,.1);font-weight:bold;text-align:center}
 .small{font-size:12px;color:#555}
 .cart,.panel{background:#fff;margin-top:15px;padding:10px;border-radius:8px}
-.cart-item{display:flex;justify-content:space-between;border-bottom:1px solid #ddd;padding:4px 0}
 button{width:100%;padding:10px;margin-top:6px;border:none;border-radius:6px;font-size:15px;color:#fff}
 .green{background:#28a745}
 .red{background:#dc3545}
@@ -26,7 +24,6 @@ button{width:100%;padding:10px;margin-top:6px;border:none;border-radius:6px;font
 .filter button{flex:1}
 .hidden{display:none}
 #scanner{width:100%;margin-top:10px}
-.report{font-size:14px;line-height:1.6}
 </style>
 </head>
 <body>
@@ -35,20 +32,14 @@ button{width:100%;padding:10px;margin-top:6px;border:none;border-radius:6px;font
 
 <div class="container">
 
-<!-- SESSION -->
 <div class="panel">
 <select id="worker">
 <option>Admin 1</option><option>Admin 2</option><option>Admin 3</option>
 <option>Admin 4</option><option>Admin 5</option><option>Admin 6</option><option>Admin 7</option>
 </select>
-
-<select id="shift">
-<option>Morning</option>
-<option>Evening</option>
-</select>
+<select id="shift"><option>Morning</option><option>Evening</option></select>
 </div>
 
-<!-- PRODUCTS -->
 <h3>Products</h3>
 <div class="filter">
 <button class="gray" onclick="filterCat('all')">All</button>
@@ -62,7 +53,6 @@ button{width:100%;padding:10px;margin-top:6px;border:none;border-radius:6px;font
 <div id="scanner" class="hidden"></div>
 <div class="products" id="products"></div>
 
-<!-- CART -->
 <div class="cart">
 <h3>Current Order</h3>
 <div id="cartItems"></div>
@@ -71,18 +61,24 @@ button{width:100%;padding:10px;margin-top:6px;border:none;border-radius:6px;font
 <button class="red" onclick="clearCart()">✖ Clear</button>
 </div>
 
-<!-- ADMIN -->
 <div class="panel">
 <input type="password" id="pin" placeholder="Admin PIN">
 <button class="gray" onclick="openAdmin()">🔐 Admin</button>
 
 <div id="admin" class="hidden">
-<button class="blue" onclick="showReport('half')">Half-Day</button>
-<button class="blue" onclick="showReport('day')">Day</button>
-<button class="blue" onclick="showReport('week')">Week</button>
-<button class="blue" onclick="showReport('month')">Month</button>
-<button class="red" onclick="resetSales()">Reset Sales</button>
-<div id="reports" class="report"></div>
+<h4>💰 Cash Management</h4>
+<input type="number" placeholder="Opening cash" onchange="setOpening(this.value)">
+<button class="blue" onclick="cashIn()">Cash In</button>
+<button class="red" onclick="cashOut()">Cash Out</button>
+<div id="cashInfo"></div>
+
+<h4>📊 Reports</h4>
+<button class="blue" onclick="report('half')">Half-Day</button>
+<button class="blue" onclick="report('day')">Day</button>
+<button class="blue" onclick="report('week')">Week</button>
+<button class="blue" onclick="report('month')">Month</button>
+<button class="blue" onclick="exportExcel()">📥 Export Excel</button>
+<div id="reports"></div>
 </div>
 </div>
 
@@ -90,101 +86,127 @@ button{width:100%;padding:10px;margin-top:6px;border:none;border-radius:6px;font
 
 <script>
 const ADMIN_PIN="1234";
-let cart=[],filter="all";
+let filter="all",cart=[];
 
 let PRODUCTS=JSON.parse(localStorage.getItem("products"))||[
- {name:"Coffee",price:30,cat:"Drink",code:"111"},
- {name:"Tea",price:40,cat:"Drink",code:"222"},
- {name:"Sandwich",price:200,cat:"Food",code:"333"}
+{name:"Coffee",price:30,cat:"Drink",stock:50,code:"111"},
+{name:"Tea",price:40,cat:"Drink",stock:50,code:"222"},
+{name:"Sandwich",price:200,cat:"Food",stock:30,code:"333"}
 ];
 
 let SALES=JSON.parse(localStorage.getItem("sales"))||[];
+let CASH=JSON.parse(localStorage.getItem("cash"))||{opening:0,in:0,out:0};
 
-function save(){localStorage.setItem("products",JSON.stringify(PRODUCTS));
-localStorage.setItem("sales",JSON.stringify(SALES));}
+function save(){
+localStorage.setItem("products",JSON.stringify(PRODUCTS));
+localStorage.setItem("sales",JSON.stringify(SALES));
+localStorage.setItem("cash",JSON.stringify(CASH));
+}
 
 function render(){
- let d=document.getElementById("products");d.innerHTML="";
- PRODUCTS.forEach((p,i)=>{
-  if(filter!=="all"&&p.cat!==filter)return;
-  let e=document.createElement("div");
-  e.className="product";
-  e.innerHTML=`${p.name}<br><span class="small">${p.price} DA – ${p.cat}</span>`;
-  e.onclick=()=>{cart.push({...p,time:new Date().toLocaleTimeString()});renderCart()};
-  e.oncontextmenu=x=>{
-    x.preventDefault();
-    if(confirm("Delete product?")){PRODUCTS.splice(i,1);save();render();}
-  };
-  d.appendChild(e);
- });
+products.innerHTML="";
+PRODUCTS.forEach((p,i)=>{
+if(filter!=="all"&&p.cat!==filter)return;
+let d=document.createElement("div");
+d.className="product";
+d.innerHTML=`${p.name}<br><span class="small">${p.price} DA – ${p.cat}</span><br><span class="small">Stock: ${p.stock}</span>`;
+d.onclick=()=>{
+if(p.stock<=0)return alert("Out of stock");
+p.stock--;
+cart.push({...p,time:new Date().toLocaleTimeString()});
+save();render();renderCart();
+};
+d.oncontextmenu=e=>{
+e.preventDefault();
+if(confirm("Delete product?")){PRODUCTS.splice(i,1);save();render();}
+};
+products.appendChild(d);
+});
 }
 render();
 
 function filterCat(c){filter=c;render();}
-
 function addProduct(){
- let n=prompt("Name");if(!n)return;
- let p=parseInt(prompt("Price DA"));if(isNaN(p))return;
- let c=prompt("Category (Drink/Food)");
- let b=prompt("Barcode (optional)")||"";
- PRODUCTS.push({name:n,price:p,cat:c,code:b});save();render();
+let n=prompt("Name"); if(!n)return;
+let p=parseInt(prompt("Price")); if(isNaN(p))return;
+let c=prompt("Category (Drink/Food)");
+let s=parseInt(prompt("Stock")); if(isNaN(s))s=0;
+let b=prompt("Barcode (optional)")||"";
+PRODUCTS.push({name:n,price:p,cat:c,stock:s,code:b});
+save();render();
 }
 
 function renderCart(){
- let c=document.getElementById("cartItems"),t=0;c.innerHTML="";
- cart.forEach((p,i)=>{
-  t+=p.price;
-  c.innerHTML+=`${p.name} (${p.time}) - ${p.price} DA <span onclick="remove(${i})">✖</span><br>`;
- });
- document.getElementById("total").innerText=t;
+cartItems.innerHTML=""; let t=0;
+cart.forEach((p,i)=>{
+t+=p.price;
+cartItems.innerHTML+=`${p.name} (${p.time}) - ${p.price} DA <span onclick="cart.splice(${i},1);renderCart()">✖</span><br>`;
+});
+total.innerText=t;
 }
-function remove(i){cart.splice(i,1);renderCart();}
 function clearCart(){cart=[];renderCart();}
 
 function checkout(){
- if(!cart.length)return;
- SALES.push({
-  admin:worker.value,
-  shift:shift.value,
-  date:new Date().toLocaleDateString(),
-  time:new Date().toLocaleTimeString(),
-  items:cart,
-  total:cart.reduce((a,b)=>a+b.price,0)
- });
- save();clearCart();
+if(!cart.length)return;
+SALES.push({
+admin:worker.value,shift:shift.value,
+date:new Date().toLocaleDateString(),
+time:new Date().toLocaleTimeString(),
+items:cart,total:cart.reduce((a,b)=>a+b.price,0)
+});
+save();clearCart();
 }
 
 function openAdmin(){
- if(pin.value!==ADMIN_PIN)return alert("Wrong PIN");
- admin.classList.toggle("hidden");
+if(pin.value!==ADMIN_PIN)return alert("Wrong PIN");
+admin.classList.toggle("hidden");
+renderCash();
 }
 
-function resetSales(){
- if(confirm("Reset all sales?")){SALES=[];save();reports.innerHTML="";}
+function setOpening(v){CASH.opening=parseInt(v)||0;save();renderCash();}
+function cashIn(){let v=parseInt(prompt("Cash in")); if(!isNaN(v)){CASH.in+=v;save();renderCash();}}
+function cashOut(){let v=parseInt(prompt("Cash out")); if(!isNaN(v)){CASH.out+=v;save();renderCash();}}
+
+function renderCash(){
+let salesTotal=SALES.reduce((a,b)=>a+b.total,0);
+let expected=CASH.opening+salesTotal+CASH.in-CASH.out;
+cashInfo.innerHTML=`Opening: ${CASH.opening} DA<br>In: ${CASH.in} DA<br>Out: ${CASH.out} DA<br>Expected: ${expected} DA`;
 }
 
-function showReport(type){
- let now=new Date(),sum=0,count=0;
- SALES.forEach(s=>{
-  let d=new Date(s.date);
-  if(type==="day"&&d.toDateString()!==now.toDateString())return;
-  if(type==="week"&&now-d>7*86400000)return;
-  if(type==="month"&&d.getMonth()!==now.getMonth())return;
-  if(type==="half"&&s.shift!==shift.value)return;
-  sum+=s.total;count++;
- });
- reports.innerHTML=`Orders: ${count}<br>Total: ${sum} DA`;
+function report(type){
+let now=new Date(),sum=0,count=0;
+SALES.forEach(s=>{
+let d=new Date(s.date);
+if(type==="half"&&s.shift!==shift.value)return;
+if(type==="day"&&d.toDateString()!==now.toDateString())return;
+if(type==="week"&&now-d>7*86400000)return;
+if(type==="month"&&d.getMonth()!==now.getMonth())return;
+sum+=s.total;count++;
+});
+reports.innerHTML=`Orders: ${count}<br>Total: ${sum} DA`;
+}
+
+function exportExcel(){
+let csv="Date,Time,Admin,Shift,Product,Category,Price\n";
+SALES.forEach(s=>{
+s.items.forEach(i=>{
+csv+=`${s.date},${s.time},${s.admin},${s.shift},${i.name},${i.cat},${i.price}\n`;
+});
+});
+csv+="\nCASH\nOpening,"+CASH.opening+"\nIn,"+CASH.in+"\nOut,"+CASH.out;
+let a=document.createElement("a");
+a.href=URL.createObjectURL(new Blob([csv],{type:"text/csv"}));
+a.download="cafeteria_report.csv";a.click();
 }
 
 function startScan(){
- document.getElementById("scanner").classList.remove("hidden");
- const q=new Html5Qrcode("scanner");
- q.start({facingMode:"environment"},{fps:10,qrbox:250},
- t=>{
-  let p=PRODUCTS.find(x=>x.code===t);
-  if(p){cart.push({...p,time:new Date().toLocaleTimeString()});renderCart();}
-  q.stop();scanner.classList.add("hidden");
- });
+scanner.classList.remove("hidden");
+const q=new Html5Qrcode("scanner");
+q.start({facingMode:"environment"},{fps:10,qrbox:250},txt=>{
+let p=PRODUCTS.find(x=>x.code===txt);
+if(p){cart.push({...p,time:new Date().toLocaleTimeString()});renderCart();}
+q.stop();scanner.classList.add("hidden");
+});
 }
 </script>
 
